--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is the header of the paragraph</h1>
+    <p>This a paragraph 1</p>
     <p>This is my first paragraph</p>
-   <p>This is another paragraph</p>
+    <p>This is another paragraph</p>
 </body>
 </html>
